(add new changes on top of this file)

Änderungen
----------

v0.9.8 (??.01.2011)
 * tx_rnbase_util_TYPO3: new check methods for TYPO3 versions 4.4 and 4.5
 * tx_rnbase_model_base: fetch single record in default constructor with respect of hidden and deleted flags

v0.9.7 (04.01.2011)
 * New class tx_rnbase_util_Strings

v0.9.6 (27.12.2010)
 * Bugfix in tx_rnbase_util_DB::searchWhere: it is possible to test joined values against 0
 * tx_rnbase_util_DB: new methods enableFields() and doQuery()
 * tx_rnbase_util_TSDAM: some new methods to access DAM information

v0.9.5 (16.11.2010)
 * Bugfix: Avoid warning while parsing TS configuration for plots
 * Bugfix: Missing include in datebase unit test added. Thanks to Hannes Bochmann
 * FormTool: Submit-Buttons and Links with icons possible
 * FormTool: New method getTCEForm()
 * FormTool: New buttons with confirm message

v0.9.4 (21.10.2010)
 * tx_rnbase_configurations: new methods getInt() and getBool()
 * BaseModule: more modificatios possible for concrete modules

v0.9.3 (26.09.2010)
 * SearchBase and util_DB: Support for HAVING clause.

v0.9.2 (26.09.2010) (not released)
 * ListBuilder renders character browser
 * Bugfix BaseFilter: CharBrowser works now with special characters (Thanks to Michael Wagner)
 * BaseController: new option ignoreActionParam to disable action setting by url parameters

v0.9.1 (13.09.2010)
 * SearchBase: ignore forcewrapper for count

v0.9.0 (03.09.2010)
 * Chart builder for extension pbimagegraph

v0.8.9 (09.08.2010)
 * All references to extensions lib/div removed.
 * PageBrowser: Respect maximum list limit.
 * tx_rnbase_controller: Verbose error messages possible if label found. Thanks to Lars Heber!
 * tx_rnbase_controller: Sending error mailings fixed. Thanks to Lars Heber!
 * Default file based cache can be activated in extension configuration.
 * Action based caching interface for frontend plugins. Not finished yet!